--- a/doc/tex/TheoryUncertainties.tex
+++ b/doc/tex/TheoryUncertainties.tex
@@ -20,7 +20,7 @@ events from scratch.
 To enable this possibilty, the variable \texttt{storeinfo\_rwgt} should be set 
 to 1 in the \powheg input file when the events are generated for the 
 first time\sidenote{Notice that even if the variable is not present, by 
-default it is set to one}. After each event, a line starting with 
+default it is set to 1.}. After each event, a line starting with 
 
 \begin{verbatim}
 #rwgt 
