A little less optimism
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@212 4525493e-7705-40b1-a816-d608a930855b

--- a/summary/summary.tex
+++ b/summary/summary.tex
@@ -252,7 +252,7 @@ formulae that will be provided by the forum.
 
 The parameter space of the $t-$channel model 
 has not yet been studied in the same detail as the
-$s-$channel models, but a proposal will be available for the full Forum report. 
+$s-$channel models, but guidance will be available for the full Forum report. 
 %[AB: Comment on the relationship to SUSY parameter space]. 
 This model is parallel to, and partially motivated by, the
 squark of the MSSM. Since the $t$-channel model can produce signatures 
