fwang: update in monojet appendix plots
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@213 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/MonojetLikeModels_Appendix.tex
+++ b/doc/tex/MonojetLikeModels_Appendix.tex
@@ -308,14 +308,14 @@ This justifies it is sufficient to produce samples with up to 2 parton emissions
 
 \begin{figure}[h!]
 	\centering  
-%	\subfloat[Missing transverse momentum]{%
-	\includegraphics[width=0.8\linewidth]{figures/monojet_appendix/h_MET_MET250.pdf}
-%	}
-%	\hfill
-%	\subfloat[Transverse momentum of leading jet]{%
-%		\includegraphics[width=0.48\linewidth]{figures/monojet_appendix/h_pt1_MET250.pdf}
-%	}
-%	\hfill
+	\subfloat[No jet multiplicity cut]{%
+		\includegraphics[width=0.48\linewidth]{figures/monojet_appendix/h_MET.pdf}
+	}
+	\hfill
+	\subfloat[$N_{\text{jet}}\leqslant$3]{%
+		\includegraphics[width=0.48\linewidth]{figures/monojet_appendix/h_MET_3jet.pdf}
+	}
+	\hfill
 %	\subfloat[Transverse momentum of subleading jet]{%
 %		\includegraphics[width=0.48\linewidth]{figures/monojet_appendix/h_pt2_MET250.pdf}
 %	}
